--- a/App/Views/GiaPha/pha_do_chi.html
+++ b/App/Views/GiaPha/pha_do_chi.html
@@ -3,6 +3,62 @@
 Chi ông {{hoSo.HoTen}}
 {% endblock %}
 {% block external_css %}
+<style>
+    .dropbtn {
+        /*color: white;*/
+        border: none;
+        cursor: pointer;
+    }
+
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        /*display: inline-block;*/
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        min-width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        top: 2.5em;
+        right: 0;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 9999;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        text-decoration: none;
+        display: block;
+        padding: 0 0 0 .5em !important;
+        line-height: 2.2em;
+        margin: 0;
+        padding: 0 4em;
+        list-style: none;
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {
+        background-color: rgba(255, 255, 255, 0.5)
+    }
+
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {
+    }
+</style>
+
 {% endblock %}
 {% block body %}
 <!-- page content -->
