--- a/App/Views/Password/reset_email.html
+++ b/App/Views/Password/reset_email.html
@@ -1,4 +1,2 @@
-
-<h1>Password reset</h1>
-
-<p>Please <a href="{{ url }}">click here to reset your password</a>.</p>
+<h1>Quên mật khẩu</h1>
+<p>Thiết lập lại mật khẩu <a href="{{ url }}">click vào đây để reset mật khẩu</a>.</p>
