--- a/App/Views/Password/reset.html
+++ b/App/Views/Password/reset.html
@@ -1,61 +1,79 @@
-{% extends 'base.html' %}
+{% extends "base_login.html" %}
 
-{% block title %}Reset password{% endblock %}
-
-{% block footer %}
-    <script src="/js/hideShowPassword.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script>
-        $(document).ready(function() {
-
-            /**
-             * Validate the form
-             */
-            $('#formPassword').validate({
-                rules: {
-                    password: {
-                        required: true,
-                        minlength: 6,
-                        validPassword: true
-                    }
-                }
-            });
-
-
-            /**
-             * Show password toggle button
-             */
-            $('#inputPassword').hideShowPassword({
-                show: false,
-                innerToggle: 'focus'
-            });
-        });
-    </script>
-
-{% endblock %}
+{% block title %}Quên mật khẩu{% endblock %}
 
 {% block body %}
-
-    <h1>Reset password</h1>
-
-    {% if user.errors is not empty %}
-        <p>Errors:</p>
-        <ul>
-            {% for error in user.errors %}
+<div class="login_wrapper">
+    <div class="animate form login_form">
+        <section class="login_content">
+            <h1>Đặt lại mật khẩu</h1>
+            {% if user.errors is not empty %}
+            <p>Errors:</p>
+            <ul>
+                {% for error in user.errors %}
                 <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+                {% endfor %}
+            </ul>
+            {% endif %}
+            <form method="post" id="formPassword" action="/password/reset-password">
+                <input type="hidden" name="token" value="{{token}}" />
+                <div>
+                    <label for="inputPassword">Mật khẩu</label>
+                    <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" required />
+                </div>
 
-    <form method="post" id="formPassword" action="/password/reset-password">
-        <input type="hidden" name="token" value="{{token}}" />
-        <div>
-            <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" name="password" placeholder="Password" required />
-        </div>
+                <button type="submit" class="form-control">Reset password</button>
 
-        <button type="submit">Reset password</button>
+            </form>
 
-    </form>
+            <div class="clearfix"></div>
+            <div class="separator">
+                <p class="change_link">Bạn là thành viên?
+                    <a href="/login" class="to_register"> Đăng nhập</a>
+                </p>
+                <div class="clearfix"></div>
+                <br/>
+                <div>
+                    <h1>
+                        Quản lý Gia phả Online
+                    </h1>
+                    <img src="/images/PA1057_gia-pha.png" alt="" style="width: 20%">
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+{% endblock %}
+{% block footer %}
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.validate.js"></script>
+<script src="/js/hideShowPassword.min.js"></script>
+<script src="/js/app.js"></script>
+<script>
+    $(document).ready(function() {
+
+        /**
+         * Validate the form
+         */
+        $('#formPassword').validate({
+            rules: {
+                password: {
+                    required: true,
+                    minlength: 6,
+                    validPassword: true
+                }
+            }
+        });
+
+
+        /**
+         * Show password toggle button
+         */
+        $('#inputPassword').hideShowPassword({
+            show: false,
+            innerToggle: 'focus'
+        });
+    });
+</script>
 
 {% endblock %}
