--- a/App/Views/Password/reset_requested.html
+++ b/App/Views/Password/reset_requested.html
@@ -1,11 +1,36 @@
-{% extends "base.html" %}
+{% extends "base_login.html" %}
 
-{% block title %}Forgot password{% endblock %}
+{% block title %}Quên mật khẩu{% endblock %}
 
 {% block body %}
+<div class="login_wrapper">
+    <div class="animate form login_form">
+        <section class="login_content">
 
-    <h1>Request password reset</h1>
+            <h1>Gửi yêu cầu lấy lại mật khẩu thành công !</h1>
 
-    <p>Please check your email.</p>
-
+            <p>Hay kiểm tra email.</p>
+            <div class="clearfix"></div>
+            <div class="separator">
+                <p class="change_link">Bạn là thành viên?
+                    <a href="/login" class="to_register"> Đăng nhập</a>
+                </p>
+                <div class="clearfix"></div>
+                <br/>
+                <div>
+                    <h1>
+                        Quản lý Gia phả Online
+                    </h1>
+                    <img src="/images/PA1057_gia-pha.png" alt="" style="width: 20%">
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+{% endblock %}
+{% block footer %}
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.validate.js"></script>
+<script src="/js/hideShowPassword.m in.js"></script>
+<script src="/js/app.js"></script>
 {% endblock %}
